# rvepp-app

./: .gitignore  Cargo.toml  README.md  rvepp.service
.github/workflows/: build.yml  rust.yml
DEBIAN/: control
crates/rvepp_cli/: Cargo.toml
crates/rvepp_cli/src/: lib.rs
crates/rvepp_cmdl_args/: Cargo.toml
crates/rvepp_cmdl_args/src/: lib.rs
crates/rvepp_common/: Cargo.toml
crates/rvepp_common/src/: constants.rs  lib.rs  logger.rs
crates/rvepp_configuration/: Cargo.toml
crates/rvepp_configuration/src/: lib.rs
crates/rvepp_ml/: Cargo.toml
crates/rvepp_ml/src/: lib.rs  ml_elf_model.rs
crates/rvepp_protection_layers/: Cargo.toml
crates/rvepp_protection_layers/src/: lib.rs  protection_layer_manager.rs  rtfm.rs
src/: main.rs
