[package]
name = "rvepp"
version = "2024.7.0"
edition = "2021"
publish = false

[workspace]
members = [
    "crates/rvepp_protection_layers", "crates/rvepp_configuration", "crates/rvepp_common", "crates/rvepp_cli"]

[workspace.package]
version = "2024.7.0"

[target.'cfg(unix)'.dependencies]
rvepp_cli = { path = "crates/rvepp_cli" }
